<resources>
    <string name="app_name">Calculator</string>
    <string name="answerLabelDefault">Answer</string>
    <string name="answerLabel">Answer %1$s</string>
    <string name="number2Label">2nd number</string>
    <string name="number1Label">1st number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
</resources>