<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number2"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:hint="@string/number2Label"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:hint="@string/number1Label"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@+id/minusBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/multiplyBtn"
        app:layout_constraintStart_toEndOf="@+id/plusBtn"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        app:layout_constraintEnd_toStartOf="@+id/divideBtn"
        app:layout_constraintStart_toEndOf="@+id/minusBtn"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiplyBtn"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="231dp"
        android:layout_height="53dp"
        android:layout_marginTop="30dp"
        android:text="@string/answerLabelDefault"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/plusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="235dp"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

</androidx.constraintlayout.widget.ConstraintLayout>
